# hfetch-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: config.rs  logo.rs  main.rs  system_info.rs
